--- a/style/index.css
+++ b/style/index.css
@@ -15,6 +15,12 @@ header {
 	overflow: hidden;
 }
 
+h2 {
+	font-size: 2em;
+	text-align: center;
+	margin: 5px 0 5px 0;
+}
+
 .photo {
 	width: 100%;
 	height: auto;
